			wxFormBuilder ChangeLog
********************************************************************************

06/11/2009 Version 3.01.61 (Beta)
+ Added support for Python (wxPython) code generation

03/06/2009 Version 3.01.60 (Beta)
* Moved the 'event_handler' type to the Forms plug-in. This allows different 
  event handling methods to be used per Frame/Dialog/Panel. This makes it even
  easier to create Dialogs that don't need any inherited class to work.
* Removed the 'virtual_decl' 'event_handler' method because it seemed like hassle
  to get a linker error instead of a compiler error. It also cleans up the options
  a bit.

02/06/2009 Version 3.01.59 (Beta)
* FS#367 - Project-Properties: encoding is ignored. Fixed ANSII file generation - Loaden
* FS#357 - wxFB overrides file without confirmation from user. - hykwok
* FS#215 - Abstract or normal class generation. - c16
* FS#394 - Separator reference not accessible through generated C++ code - pmendl
* FS#379 - Un/escaped some property values in XRC - malcom

08/04/2008 Version 3.01.58 (Beta)
+ Added validator support for C++.

04/15/2008 Version 3.00.57
* FS#349 - "RC8 menu editor still generate incorect menu item code"
* FS#345 - "Crash on Mac OS X when loading plugins"
* Fixed crash on close when showing a propgrid from the wxAdditions plugin
  in the Designer window.
* FS#351 - "Can't edit choises if the '\' is used"

03/18/2008 Version 3.00.56 (RC8)
* Added #include <wx/intl.h> to header file when using internationalization.
* Custom control now inherits from wxWindow, to provide common properties.
* FS#336 - "Incorrect ScrollBar Disconnection"
* FS#310 - "FB should not try to disconnect event handlers in dialog/frame's destructor."
  This is now optional, see the "disconnect_events" property of the Project object.
* FS#337 - "Incorrect Vertical Toolbar Rendering"
* FS#328 - "Unknown style flag wxTE_BESTWRAP for wxTextCtrl"